--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,11 +3,8 @@ $small: 576px;
 $bgColor: #0d1732;
 $secondaryColor: #e83a35;
 
-html{
-  overflow-x: hidden;
-  font-family: Raleway, sans-serif;
-}
 body{
+  font-family: 'Raleway', sans-serif;
   background-color: $bgColor;
 }
 section{
@@ -27,26 +24,25 @@ label{
 input,textarea{
   width: 100%;
 }
-.home{
-  width: 100vw;
+.canvas-div{
+  width: 100%;
   height: 100vh;
   top:0;
   left:0;
 }
+.canvas-stars{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
 .welcome{
   font-size: 3.5rem;
-  font-family: Raleway, sans-serif;
   font-weight: 900; 
   // text-transform: uppercase;
   letter-spacing: 0.2rem;
   text-shadow: 0 0 .8rem white;
   z-index: 1000;
-}
-.canvas-stars{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
 }
 
 .section-title{
@@ -73,8 +69,6 @@ input,textarea{
     position: relative;
     color: $secondaryColor;
     font-size: 2.5rem;
-    // font-weight: 100;
-    font-family: 'Raleway';
     // text-shadow: 0 0 1rem #e83a35, 1px 1px 1rem #e83a35, 2px 2px 1rem #e83a35, -1px -1px 1rem #e83a35, -2px -2px 1rem #e83a35;
     will-change:transform;
     animation: zium 15s infinite linear
@@ -95,14 +89,15 @@ $astronautWidth: 62px;
   z-index: 2000;
 }
 .wrap{
-  padding: 2.5rem .5rem 1rem .5rem;
+  padding: 4rem .5rem 1rem .5rem;
   @media only screen and (min-width: $small){
     padding: 4rem 1rem 2rem 1rem;
   }
 }
-.shadow-custom{
-  box-shadow: 0 0 .5rem 0 #6d7384;
+.img-border{
+  border: 1rem solid $secondaryColor;
 }
+
 picture{
   width:50%;
   height: auto;
@@ -122,11 +117,6 @@ picture{
 @keyframes typing{
   from {width: 0}
   to {width: 100%}
-}
-
-.portfolio::after{
-  content: "";
-  background: rgba($color: #4caab2, $alpha: .5);
 }
 
 button[type="submit"]{
